crates/alien-cloudformation/tests/generator/snapshots/generator__generator__aws_data_layer_tests__aws_byo_bucket.snap
---
source: crates/alien-cloudformation/tests/generator/aws_data_layer_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: BYO Bucket
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - ManagingRoleArn
    ParameterLabels:
      ManagingRoleArn:
        default: Management role ARN
Parameters:
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
Resources:
  Exports:
    Type: AWS::S3::Bucket
    Properties:
      BucketName:
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - exports
          - Fn::Select:
            - 0
            - Fn::Split:
              - '-'
              - Fn::Select:
                - 2
                - Fn::Split:
                  - /
                  - Ref: AWS::StackId
      BucketEncryption:
        ServerSideEncryptionConfiguration:
        - ServerSideEncryptionByDefault:
            SSEAlgorithm: AES256
      OwnershipControls:
        Rules:
        - ObjectOwnership: BucketOwnerEnforced
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: exports
      - Key: resource-type
        Value: storage
      AbacStatus: Enabled
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
  ExportsBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket:
        Ref: Exports
      PolicyDocument:
        Version: 2012-10-17
        Statement:
        - Sid: DenyInsecureTransport
          Effect: Deny
          Principal: '*'
          Action: s3:*
          Resource:
          - Fn::GetAtt:
            - Exports
            - Arn
          - Fn::Sub: arn:${AWS::Partition}:s3:::${Exports}/*
          Condition:
            Bool:
              aws:SecureTransport: 'false'
  ExportsAccessRoleStoragePermission00:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName:
        Fn::Sub: ${AWS::StackName}-exports-storage-0-0
      PolicyDocument:
        Version: 2012-10-17
        Statement:
        - Action:
          - s3:GetBucketLocation
          - s3:ListBucket
          - s3:ListBucketMultipartUploads
          Effect: Allow
          Resource:
          - Fn::GetAtt:
            - Exports
            - Arn
          Sid: ListBucketAndUploads
        - Action:
          - s3:AbortMultipartUpload
          - s3:DeleteObject
          - s3:GetObject
          - s3:ListMultipartUploadParts
          - s3:PutObject
          Effect: Allow
          Resource:
          - Fn::Sub: arn:${AWS::Partition}:s3:::${Exports}/*
          Sid: ReadWriteBucketObjects
      Roles:
      - Ref: AccessRole
    DependsOn:
    - Exports
    - AccessRole
  AccessRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName:
        Fn::Sub: ${AWS::StackName}-access
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Sid: AllowManagingRole
          Effect: Allow
          Principal:
            AWS:
              Ref: ManagingRoleArn
          Action: sts:AssumeRole
          Condition:
            StringEquals:
              aws:PrincipalArn:
                Ref: ManagingRoleArn
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: access
      - Key: resource-type
        Value: resource-access
Outputs:
  DeploymentSourceKind:
    Value: cloudformation
    Description: Setup source kind.
  DeploymentResourcePrefix:
    Value:
      Ref: AWS::StackName
    Description: Stable physical resource prefix.
  DeploymentPlatform:
    Value: aws
    Description: Target platform.
  DeploymentRegion:
    Value:
      Ref: AWS::Region
    Description: AWS region.
  DeploymentSetupTarget:
    Value: aws
    Description: Setup target.
  DeploymentSetupFingerprint:
    Value: test
    Description: Setup compatibility fingerprint.
  DeploymentSetupImportFormatVersion:
    Value: 1
    Description: Setup registration payload format version.
  DeploymentSetupFingerprintVersion:
    Value: 1
    Description: Setup fingerprint algorithm version.
  DeploymentManagementConfig:
    Value:
      Fn::ToJsonString:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
    Description: Deployment registration management configuration JSON.
  DeploymentStackSettings:
    Value:
      Fn::ToJsonString:
        deploymentModel: push
        updates: approval-required
        telemetry: "off"
        heartbeats: "on"
    Description: Deployment registration settings JSON.
  DeploymentResources:
    Value:
      Fn::ToJsonString:
      - id: exports
        type: storage
        importData:
          bucketName:
            Ref: Exports
          bucketArn:
            Fn::GetAtt:
            - Exports
            - Arn
      - id: access
        type: resource-access
        importData:
          roleName:
            Ref: AccessRole
          roleArn:
            Fn::GetAtt:
            - AccessRole
            - Arn
    Description: Deployment registration resources JSON.
