crates/alien-cloudformation/tests/generator/snapshots/generator__generator__aws_data_layer_tests__aws_data_layer.snap
---
source: crates/alien-cloudformation/tests/generator/aws_data_layer_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: aws data layer
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - ManagingRoleArn
      - ManagingAccountId
    - Label:
        default: Operations
      Parameters:
      - UpdatesMode
      - TelemetryMode
      - HeartbeatsMode
    ParameterLabels:
      HeartbeatsMode:
        default: Heartbeats
      ManagingAccountId:
        default: Image account ID
      ManagingRoleArn:
        default: Management role ARN
      TelemetryMode:
        default: Telemetry
      UpdatesMode:
        default: Updates
Parameters:
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
    Default: ''
  ManagingAccountId:
    Type: String
    Description: AWS account ID for the management account that hosts application container images.
    Default: ''
  NetworkMode:
    Type: String
    Description: Choose create-new for a managed VPC, use-existing for your VPC, or use-default for the account default VPC.
    Default: create-new
    AllowedValues:
    - create-new
    - use-existing
    - use-default
  EndpointAccess:
    Type: String
    Description: Who can reach this deployment's endpoints. Private access requires AWS managed containers and cannot change after setup.
    Default: internet
    AllowedValues:
    - internet
    - private
  UpdatesMode:
    Type: String
    Description: How updates are applied after setup registration.
    Default: auto
    AllowedValues:
    - auto
    - approval-required
  TelemetryMode:
    Type: String
    Description: Telemetry collection behavior.
    Default: auto
    AllowedValues:
    - auto
  HeartbeatsMode:
    Type: String
    Description: Heartbeat health-check behavior.
    Default: "on"
    AllowedValues:
    - "off"
    - "on"
Resources:
  Assets:
    Type: AWS::S3::Bucket
    Properties:
      BucketName:
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - assets
          - Fn::Select:
            - 0
            - Fn::Split:
              - '-'
              - Fn::Select:
                - 2
                - Fn::Split:
                  - /
                  - Ref: AWS::StackId
      BucketEncryption:
        ServerSideEncryptionConfiguration:
        - ServerSideEncryptionByDefault:
            SSEAlgorithm: AES256
      OwnershipControls:
        Rules:
        - ObjectOwnership: BucketOwnerEnforced
      PublicAccessBlockConfiguration:
        BlockPublicAcls: false
        BlockPublicPolicy: false
        IgnorePublicAcls: false
        RestrictPublicBuckets: false
      VersioningConfiguration:
        Status: Enabled
      LifecycleConfiguration:
        Rules:
        - Id: Rule1
          Status: Enabled
          ExpirationInDays: 30
          Prefix: tmp/
        - Id: Rule2
          Status: Enabled
          ExpirationInDays: 365
          Prefix: ''
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: assets
      - Key: resource-type
        Value: storage
      AbacStatus: Enabled
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
  AssetsBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket:
        Ref: Assets
      PolicyDocument:
        Version: 2012-10-17
        Statement:
        - Sid: DenyInsecureTransport
          Effect: Deny
          Principal: '*'
          Action: s3:*
          Resource:
          - Fn::GetAtt:
            - Assets
            - Arn
          - Fn::Sub: arn:${AWS::Partition}:s3:::${Assets}/*
          Condition:
            Bool:
              aws:SecureTransport: 'false'
        - Sid: AllowPublicRead
          Effect: Allow
          Principal: '*'
          Action: s3:GetObject
          Resource:
            Fn::Sub: arn:${AWS::Partition}:s3:::${Assets}/*
  Jobs:
    Type: AWS::SQS::Queue
    Properties:
      SqsManagedSseEnabled: true
      VisibilityTimeout: 30
      MessageRetentionPeriod: 345600
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: jobs
      - Key: resource-type
        Value: queue
  Metadata:
    Type: AWS::DynamoDB::Table
    Properties:
      BillingMode: PAY_PER_REQUEST
      AttributeDefinitions:
      - AttributeName: pk
        AttributeType: S
      - AttributeName: sk
        AttributeType: S
      KeySchema:
      - AttributeName: pk
        KeyType: HASH
      - AttributeName: sk
        KeyType: RANGE
      SSESpecification:
        SSEEnabled: true
      TimeToLiveSpecification:
        AttributeName: ttl
        Enabled: true
      PointInTimeRecoverySpecification:
        PointInTimeRecoveryEnabled: true
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: metadata
      - Key: resource-type
        Value: kv
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
Outputs:
  DeploymentSourceKind:
    Value: cloudformation
    Description: Setup source kind.
  DeploymentResourcePrefix:
    Value:
      Ref: AWS::StackName
    Description: Stable physical resource prefix.
  DeploymentPlatform:
    Value: aws
    Description: Target platform.
  DeploymentRegion:
    Value:
      Ref: AWS::Region
    Description: AWS region.
  DeploymentSetupTarget:
    Value: aws
    Description: Setup target.
  DeploymentSetupFingerprint:
    Value: test
    Description: Setup compatibility fingerprint.
  DeploymentSetupImportFormatVersion:
    Value: 1
    Description: Setup registration payload format version.
  DeploymentSetupFingerprintVersion:
    Value: 1
    Description: Setup fingerprint algorithm version.
  DeploymentManagementConfig:
    Value:
      Fn::ToJsonString:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
    Description: Deployment registration management configuration JSON.
  DeploymentStackSettings:
    Value:
      Fn::ToJsonString:
        deploymentModel: push
        endpointAccess:
          Ref: EndpointAccess
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Ref: AWS::NoValue
    Description: Deployment registration settings JSON.
  DeploymentResources:
    Value:
      Fn::ToJsonString:
      - id: assets
        type: storage
        importData:
          bucketName:
            Ref: Assets
          bucketArn:
            Fn::GetAtt:
            - Assets
            - Arn
      - id: jobs
        type: queue
        importData:
          queueName:
            Fn::GetAtt:
            - Jobs
            - QueueName
          queueUrl:
            Ref: Jobs
          queueArn:
            Fn::GetAtt:
            - Jobs
            - Arn
      - id: metadata
        type: kv
        importData:
          tableName:
            Ref: Metadata
          tableArn:
            Fn::GetAtt:
            - Metadata
            - Arn
      - id: secrets
        type: vault
        importData:
          accountId:
            Ref: AWS::AccountId
          region:
            Ref: AWS::Region
          parameterPrefix:
            Fn::Sub: ${AWS::StackName}-secrets
    Description: Deployment registration resources JSON.
